apps/base/swpt-debtors/app-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-gateway
  labels:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: app-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: swpt-debtors
      app.kubernetes.io/component: app-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swpt-debtors
        app.kubernetes.io/component: app-gateway
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: swpt-debtors
                app.kubernetes.io/component: app-gateway
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: smp-receiver
      containers:
        - name: app-gateway
          image: nginx
          ports:
            - name: https
              containerPort: 443
            - name: stomp
              containerPort: 1234
          readinessProbe:
            tcpSocket:
              port: stomp
            initialDelaySeconds: 5
          volumeMounts:
            - name: ssl-certificate
              mountPath: /etc/nginx/ssl/cert.pem
              subPath: cert
            - name: ssl-certificate
              mountPath: /etc/nginx/ssl/key.pem
              subPath: key
            - name: ssl-session-ticket-key
              mountPath: /etc/nginx/ssl/ssl_session_ticket.key
              subPath: key
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-config
              mountPath: /etc/nginx/templates/default.conf.template
              subPath: default.conf.template
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-gateway-config
        - name: ssl-certificate
          secret:
            secretName: ssl-certificate
        - name: ssl-session-ticket-key
          secret:
            secretName: ssl-session-ticket-key

---
apiVersion: v1
kind: Service
metadata:
  name: app-gateway
  labels:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: app-gateway
spec:
  selector:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: app-gateway
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
    - name: stomp
      port: 1234
      protocol: TCP
      targetPort: stomp
  type: LoadBalancer

  # When "externalTrafficPolicy" is "Local", most providers will
  # preserve the client IPs. However, for some providers this will not
  # be enough. Digital Ocean, for example, requires you to also add
  # this annotation to the service:
  # `service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"`,
  # and then reconfigure your server to use "Proxy protocol" (see
  # https://seriousben.com/posts/2020-02-exploring-the-proxy-protocol/).
  #
  externalTrafficPolicy: Local
