apps/base/swpt-debtors/nfs-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  labels:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: nfs-server
spec:
  replicas: 1  # must be exactly 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: swpt-debtors
      app.kubernetes.io/component: nfs-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swpt-debtors
        app.kubernetes.io/component: nfs-server
    spec:
      priorityClassName: critical-database
      containers:
        - name: nfs-server
          image: swpt-nfs-server
          args: ['nfsd']
          securityContext:
            capabilities:
              add: ["SYS_ADMIN", "SETPCAP"]
          ports:
            - name: nfs
              containerPort: 2049
          readinessProbe:
            tcpSocket:
              port: nfs
            initialDelaySeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - mountPath: "/mnt/nfs-share/"
              name: git-repo-working-copy
              readOnly: false
        - name: git-pull
          image: swpt-nfs-server
          args: ['git-pull']
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts:
            - mountPath: "/mnt/nfs-share/"
              name: git-repo-working-copy
              readOnly: false
            - name: git-pull-ssh-id
              mountPath: "/etc/ssh/id_rsa"
              subPath: id_rsa
            - name: git-pull-ssh-id
              mountPath: "/etc/ssh/id_rsa.pub"
              subPath: id_rsa.pub
            - name: git-pull-ssh-id
              mountPath: "/etc/ssh/id_rsa-cert.pub"
              subPath: id_rsa-cert.pub
      volumes:
        - name: git-repo-working-copy
          persistentVolumeClaim:
            claimName: git-repo-working-copy
        - name: git-pull-ssh-id
          secret:
            secretName: git-pull-ssh-id
            defaultMode: 0600

---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  labels:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: nfs-server
spec:
  selector:
    app.kubernetes.io/name: swpt-debtors
    app.kubernetes.io/component: nfs-server
  ports:
    - name: nfs
      port: 2049
      protocol: TCP
      targetPort: nfs

  # Unfortunately Kubernetes doesn't look at KubeDNS when setting up
  # NFS volumes so we have to specify it here.
  clusterIP: 10.96.0.2
