apps/base/swpt-debtors/ory-hydra.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: swpt-hydra-admin
  labels:
    app.kubernetes.io/name: hydra
    app.kubernetes.io/instance: swpt
    app.kubernetes.io/component: admin
spec:
  type: ClusterIP
  ports:
    - port: 4445
      targetPort: http-admin
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hydra
    app.kubernetes.io/instance: swpt

---
apiVersion: v1
kind: Service
metadata:
  name: swpt-hydra-public
  labels:
    app.kubernetes.io/name: hydra
    app.kubernetes.io/instance: swpt
spec:
  type: ClusterIP
  ports:
    - port: 4444
      targetPort: http-public
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hydra
    app.kubernetes.io/instance: swpt

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swpt-hydra-maester
  labels:
    app.kubernetes.io/name: hydra-maester
    app.kubernetes.io/instance: swpt
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: swpt-hydra-maester
      app.kubernetes.io/instance: swpt
  template:
    metadata:
      labels:
        control-plane: controller-manager
        app.kubernetes.io/name: swpt-hydra-maester
        app.kubernetes.io/instance: swpt
    spec:
      terminationGracePeriodSeconds: 60
      priorityClassName: oauth2-server
      containers:
        - name: hydra-maester
          image: oryd-hydra-maester
          command:
            - /manager
          args:
            - --metrics-addr=127.0.0.1:8080
            - --hydra-url=http://swpt-hydra-admin
            - --hydra-port=4445
            - --endpoint=/admin/clients
          volumeMounts:
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 20Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
            seLinuxOptions:
              level: s0:c123,c456
            seccompProfile:
              type: RuntimeDefault
      serviceAccountName: swpt-hydra-maester-account
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swpt-hydra
  labels:
    app.kubernetes.io/name: hydra
    app.kubernetes.io/instance: swpt
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: hydra
      app.kubernetes.io/instance: swpt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hydra
        app.kubernetes.io/instance: swpt
    spec:
      volumes:
        - name: hydra-config-volume
          configMap:
            name: swpt-hydra
      serviceAccountName: swpt-hydra
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60
      containers:
        - name: hydra
          image: oryd-hydra
          command:
            - hydra
          args:
            - serve
            - all
            - --config
            - /etc/config/hydra.yaml
          volumeMounts:
            - name: hydra-config-volume
              mountPath: /etc/config/hydra.yaml
              subPath: hydra.yaml
              readOnly: true
          ports:
            - name: http-public
              containerPort: 4444
              protocol: TCP
            - name: http-admin
              containerPort: 4445
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health/alive
              port: 4445
              httpHeaders:
                - name: Host
                  value: '127.0.0.1'
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health/ready
              port: 4445
              httpHeaders:
                - name: Host
                  value: '127.0.0.1'
            failureThreshold: 5
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
            seLinuxOptions:
              level: s0:c123,c456
            seccompProfile:
              type: RuntimeDefault
      priorityClassName: oauth2-server
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault

---
# Source: hydra/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "swpt-hydra-test-connection"
  labels:
    app.kubernetes.io/name: swpt-login
    app.kubernetes.io/component: web-server
    app.kubernetes.io/part-of: swpt-debtors
spec:
  containers:
    - name: healthcheck-ready
      image: "busybox:1"
      command: ['wget']
      args:  ['swpt-hydra-admin:4445/health/ready']
  restartPolicy: Never
